index.html change

--- a/webpage/templates/index.html
+++ b/webpage/templates/index.html
@@ -89,7 +89,7 @@
         </p1>
         <div class="form-container">
             <form action="/handle_message" method="post">
-                <h2>My name is DobnerGPT!</h2><br>
+                <h2>Hi, my name is DobnerGPT!</h2><br>
                 <input type="text" id="message" name="message"><br>
                 <input type="submit" id="submit-button" value="Submit">
             </form>
