Fixed URL issues

--- a/webpage/templates/index.html
+++ b/webpage/templates/index.html
@@ -100,7 +100,7 @@
     </head>
     <body>
         <h1>Calculus AI Chatbot</h1>
-        <a href="about.html" class="tab-link" target="_blank">About</a>
+        <a href="/about" class="tab-link" target="_blank">About</a>
         <p1>In the box, ask a question for our chatbot regarding Calculus or Mathematics, and our bot will do its
             best to answer it! Remember that this bot is meant to help with your learning, and not give direct answers. Happy Learning!
         </p1>
